2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkgendoc: In generated code, define __USE_STD_IOSTREAM if using
	Compaq C++.

	* Makefile.in (distclean): Also remove doc-files and gendoc.cc.

	* input.cc (initialize_command_input): Use const for
	initialization of char * from literal string.

	* pt-plot.cc (subplot::extract_plot_data): Call single_subsref,
	not subsref.
	* ov.h, ov.cc (single_subsref (const std::string&, const
	octave_value_list&)): Rename from subsref.

	* symtab.cc (symbol_table::rename): Explicitly convert C string to
	std::string so type of second arg of ?: matches third.
	(symbol_table::lookup): Likewise.

	* mappers.cc: Remove std:: qualifiers from C library names.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-exp.h (tree_expression::has_magic_end): New pure virtual function.
	* pt-id.h (tree_identifier::has_magic_end): New function.
	* pt-colon.h (tree_colon_expression::has_magic_end): Likewise.
	* pt-idx.h (tree_index_expression::has_magic_end): Likewise.
	* pt-const.h (tree_constant::has_magic_end): Likewise.
	* pt-unop.h (tree_unary_expression::has_magic_end): Likewise.
	* pt-binop.h (tree_binary_expression::has_magic_end): Likewise.
	* pt-assign.h (tree_multi_assignment::has_magic_end): Likewise.
	(tree_simple_assignment::has_magic_end): Likewise.
	* pt-mat.cc (tree_matrix::has_magic_end): Likewise.
	* pt-arg-list.cc (tree_argument_list::has_magic_end): Likewise.

	* pt-arg-list.cc (tree_argument_list::append): Check all
	expression types for magic end token..

	* file-io.cc (Ftmpnam): Improve error checking.
	(symbols_of_file_io): Move definition of P_tmpdir here from dirfns.cc.

	* dirfns.cc (symbols_of_dirfns): Install new built-in constant
	P_tmpdir.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dirfns.cc (symbols_of_dirfns): New function.
	Install new built-in constant filesep.

	* utils.cc (Fisvaranme): New function.
	(valid_identifier): Identifiers can't start with digits!  Doh!
